--- a/src/app/components/ad/ad.component.scss
+++ b/src/app/components/ad/ad.component.scss
@@ -1,43 +1,44 @@
-@import '/src/styles.scss';
+@import "/src/styles.scss";
 
 .ad {
   max-width: 200px;
   width: 100%;
   max-height: 350px;
   height: 100%;
-  
+
   &__carousel {
     max-height: 200px;
     max-width: 200px;
+    height: 100%;
+    width: 100%;
     background-color: #ddd0d0;
     border-radius: 20px;
   }
-  &__description{
+  &__description {
     padding: 5px;
     display: flex;
     flex-direction: column;
-    
+
     &-header {
       display: flex;
       justify-content: space-between;
     }
-
 
     &-title {
       font-size: 16px;
       font-weight: 500;
       color: $defaultColor;
       overflow: hidden;
-   text-overflow: ellipsis;
-   display: -webkit-box;
-   -webkit-line-clamp: 2; /* number of lines to show */
-           line-clamp: 2; 
-   -webkit-box-orient: vertical;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2; /* number of lines to show */
+      line-clamp: 2;
+      -webkit-box-orient: vertical;
       &:hover {
         font-weight: 600;
       }
     }
-  
+
     &-price {
       font-size: 18px;
       font-weight: 600;
@@ -50,7 +51,6 @@
     &-date {
       color: #808080;
     }
-
   }
 }
 
@@ -59,7 +59,118 @@
   height: 200px;
   object-fit: cover;
   object-position: center;
-  border-radius: 15px;
+  border-radius: 20px;
   display: block;
   margin: auto;
+}
+
+@media (max-width: 700px) {
+  .ad {
+    max-width: 250px;
+    max-height: 375px;
+
+    &__carousel {
+      max-height: 250px;
+      max-width: 250px;
+    }
+  }
+
+  .advertisement-image {
+    width: 250px;
+    height: 250px;
+  }
+}
+
+@media (max-width: 600px) {
+  .ad {
+    max-width: 225px;
+    max-height: 350px;
+    
+    &__carousel {
+      max-height: 225px;
+      max-width: 225px;
+    }
+
+    &__description {
+      &-title {
+        font-size: 14px;
+      }
+
+      &-price {
+        font-size: 16px;
+      }
+    }
+  }
+
+  .advertisement-image {
+    width: 225px;
+    height: 225px;
+  }
+}
+
+@media (max-width: 525px) {
+  .ad {
+    max-width: 200px;
+    max-height: 320px;
+
+    &__carousel {
+      max-height: 200px;
+      max-width: 200px;
+    }
+  }
+
+  .advertisement-image {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+@media (max-width: 450px) {
+  .ad {
+    max-width: 175px;
+
+    &__carousel {
+      max-height: 175px;
+      max-width: 175px;
+    }
+
+    &__description {
+      &-title {
+        font-size: 13px;
+      }
+      &-price {
+        font-size: 14px;
+      }
+    }
+  }
+  
+  .advertisement-image {
+    width: 175px;
+    height: 175px;
+  }
+}
+
+@media (max-width: 375px) {
+  .ad {
+    max-width: 150px;
+
+    &__carousel {
+      max-height: 150px;
+      max-width: 150px;
+    }
+
+    &__description {
+      &-title {
+        font-size: 13px;
+      }
+      &-price {
+        font-size: 14px;
+      }
+    }
+  }
+  
+  .advertisement-image {
+    width: 150px;
+    height: 150px;
+  }
 }
