--- a/src/app/components/search-ads/search-ads.component.html
+++ b/src/app/components/search-ads/search-ads.component.html
@@ -1,14 +1,85 @@
 <div class="container">
   <div *ngIf="!(loadingService.isLoading$ | async); else loading">
-    <div class="title">
-      По вашему запросу найдено объявлений: {{ ads.total }}
+    <div class="title__wrapper">
+      <div class="title">
+        По вашему запросу найдено объявлений: {{ ads.total }}
+      </div>
+      
+        <span class="filters__btn" *ngIf="screenWidth <= 700" (click)="openFilters()" nz-icon nzType="filter" nzTheme="outline"></span>
+
+      <nz-drawer
+    [nzClosable]="true"
+    [nzVisible]="visibleFilters"
+    nzPlacement="left"
+    nzTitle="Фильтры"
+    (nzOnClose)="closeFilters()"
+  >
+    <ng-container *nzDrawerContent>
+      <form  style="margin-top: 25px;"
+      [formGroup]="filtersForm"
+      class="search-ads__filters__form"
+      (ngSubmit)="onFiltersSubmit()"
+      >
+      <div
+      
+      class="search-ads__tree"
+    >
+      <nz-tree-select
+        [nzNodes]="(categories$ | async) || []"
+        nzPlaceHolder="Категория"
+        formControlName="categoryId"
+      ></nz-tree-select>
     </div>
+    <div>
+      <ngx-dadata
+        nz-input
+        class="search-ads__address"
+        formControlName="location"
+        [config]="config"
+        placeholder="Регион"
+        (selected)="onAddressSelected($event)"
+      ></ngx-dadata>
+    </div>
+          <div>
+            <label class="search-ads__filters__form__title">Цена от</label>
+            <input nz-input formControlName="fromPrice" type="text" />
+          </div>
+          <div>
+            <label class="search-ads__filters__form__title">Цена до</label>
+            <input nz-input formControlName="toPrice" type="text" />
+          </div>
+          <div class="search-ads__filter__form__ordering">
+            <nz-radio-group
+              [(ngModel)]="radioValue"
+              nzName="ordering"
+              formControlName="ordering"
+            >
+              <label nz-radio nzValue="def">По умолчанию</label>
+              <label nz-radio nzValue="asc">По возрастанию цены</label>
+              <label nz-radio nzValue="desc">По убыванию цены</label>
+            </nz-radio-group>
+          </div>
+  
+          <button nz-button nzType="primary" type="submit">Применить</button>
+          <button
+            nz-button
+            nzType="default"
+            type="button"
+            (click)="cleanFilters()"
+          >
+            Очистить фильтры
+          </button>
+        </form>
+    </ng-container>
+  </nz-drawer>
+    </div>
+    
     <div class="search-ads">
-      <div class="search-ads__filters">
+      <div class="search-ads__filters" *ngIf="screenWidth > 700">
         <form
           [formGroup]="filtersForm"
           class="search-ads__filters__form"
-          (ngSubmit)="onPriceSubmit()"
+          (ngSubmit)="onFiltersSubmit()"
         >
           <div>
             <label class="search-ads__filters__form__title">Цена от</label>
@@ -41,6 +112,7 @@
           </button>
         </form>
       </div>
+      
       <div class="ads__content">
         <div class="ads">
           <div class="" *ngFor="let ad of ads.items">
@@ -48,7 +120,7 @@
           </div>
         </div>
         
-        <nz-pagination
+        <nz-pagination *ngIf="ads.total > 0"
           class="ads__pagination"
           [nzPageIndex]="pageNumber"
           [nzPageSize]="pageSize"
