--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -47,8 +47,10 @@ nz-upload {
 @media(max-width: 700px) {
   .profile {  
     display: block;
+    margin-top: 20px;
     &__avatar {
       margin-bottom: 25px;
     }
   }
 }
+
