--- a/src/app/components/ad-full/ad-full.component.html
+++ b/src/app/components/ad-full/ad-full.component.html
@@ -23,10 +23,11 @@
 
   </div>
   <div class="advertisement__content">
-    <div class="advertisement__content-image">
+    <div class="advertisement__content-image" >
+      <div class="advertisement__content-image" *ngIf="ad.images.length > 0; else noImages">
+        <span (click)="pre()" class="advertisement__content-image__left" nz-icon nzType="left" nzTheme="outline"></span>
       
-      <span (click)="pre()" class="advertisement__content-image__left" nz-icon nzType="left" nzTheme="outline"></span>
-      <nz-carousel [nzEnableSwipe]="false"  >
+      <nz-carousel [nzEnableSwipe]="swipe"  >
         <div nz-carousel-content *ngFor="let image of ad?.images">
           <nz-image-group>
             <img class="advertisement-image-bg" src="{{image.item2}}" >
@@ -36,6 +37,9 @@
         </div>
       </nz-carousel>
       <span (click)="next()" class="advertisement__content-image__right" nz-icon nzType="right" nzTheme="outline"></span>
+
+      </div>
+      
     </div>
     <div class="advertisement__content-communication">
       <nz-avatar [nzSize]="64" nzIcon="user" nzSrc="{{ ad.authorAvatar }}"></nz-avatar>
@@ -77,7 +81,7 @@
       </div>
       <h3>{{ ad.locationQueryString }}</h3>
       <h2 class="title" >Описание</h2>
-      <h3>{{ ad.description }}</h3>
+      <h3 style="white-space: pre-line">{{ ad.description }}</h3>
       <h2 class="title" >Размещено</h2>
       <h3>{{ ad.dateTimeCreated }}</h3>
 
@@ -102,7 +106,7 @@
                   {{ comment.dateTimeCreated }}
                 </div>
               </div>
-              <div class="comment__text">
+              <div class="comment__text" style="white-space: pre-line">
                 {{ comment.text }}
               </div>
             </div>
@@ -145,4 +149,8 @@
     <div class="empty__text">Здесь пока пусто</div>
     <a *ngIf="user.id != ad.authorId" nz-button nzType="primary" (click)="showModal()">Оставить комментарий</a>
   </div>
+</ng-template>
+
+<ng-template #noImages>
+    <img class="advertisement-image__empty" src="{{ fallback }}" />
 </ng-template>
