--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,10 @@ body {
   padding: 0;
   margin: 0;
   font-family: $montserratFont;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
 }
 
 ul,
@@ -27,6 +31,8 @@ li {
   max-width: 1050px;
   margin: auto;
   padding: 0 15px;
+  min-width: 100vh;
+  
 }
 
 .logo {
